Bug 1346326 - implement new console.count semantics; r=baku

Bug 1346326 points out that the console.count spec has changed to

  void count(optional DOMString label = "default");

This patch implements the same behavior, but does not change the webidl,
on the theory that perhaps something relies on the current "any..."
type.

MozReview-Commit-ID: 9RQKAZ4AVtT